--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -5,5 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "db": "Host=ep-sweet-field-a2x1v45k-pooler.eu-central-1.aws.neon.tech; Database=neondb; Username=neondb_owner; Password=npg_IS6ju5BcEwXO; SSL Mode=VerifyFull; Channel Binding=Require;"
 }
